<resources>
    <string name="app_name">Common</string>
    <string name="facebook_app_id">1931402953642984</string>
    <string name="fb_login_protocol_scheme">fb1931402953642984</string>
    <string name="welcome_message">Welcome</string>
    <string name="login_with">Login with</string>
    <string name="or">Or</string>
    <string name="password_text"> </string>
    <string name="login_button">Login</string>
    <string name="locations">Locations Near You</string>
    <string name="trendingClasses">Trending Classes</string>
    <string name="calendar">Select Date</string>
    <string name="get_started_with">Get started with</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="sign_up_text_button">Sign Up</string>
    <string name="login_text_button">Log in</string>
    <string name="need_an_account_text">Need an account?</string>
    <string name="email_text_button">Email</string>
    <string name="back_login_to_main_text_button">Log in</string>
    <string name="already_onboard_text">Already onboard?</string>
    <string name="select_from_data_text">Select From Dates</string>
    <string name="selectDateText">Select Date</string>
    <string name="logout_button">Log out</string>
    <string name="title_activity_main2">Leanback Main2Activity Title</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="classesText">Classes</string>
    <string name="changeDate">Change the date</string>
    <string name="confirmText">CONFIRM</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="title_activity_qqqqqqqqqqqqqqqqqqqq">qqqqqqqqqqqqqqqqqqqq</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>